<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mapuslan.userUI.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home_user" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.mapuslan.userUI.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera_user" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.mapuslan.userUI.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile_crafter" />
</navigation>