<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mapuslan.Welcome">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="313dp"
        android:layout_height="151dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.293"
        app:srcCompat="@drawable/img" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="32dp"
        android:letterSpacing="0.15"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/homelogin_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.219" />

    <com.google.android.material.button.MaterialButton
        android:theme="@style/Theme.MaterialComponents"
        android:id="@+id/homelogin_btn"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/btn_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/colorPrimary"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toTopOf="@+id/homesignup_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.928"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/homesignup_btn"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:text="@string/btn_signup"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:theme="@style/Theme.MaterialComponents"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        app:backgroundTint="@android:color/white"
        app:cornerRadius="5dp"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.7"
        app:strokeColor="@color/green"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>