<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/white"
        tools:context=".MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="729dp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:backgroundTint="@color/white"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="216dp"
                android:layout_height="72dp"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.293"
                app:srcCompat="@drawable/img" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/btn_signup"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/dark_green"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:hint="Username"
                android:padding="8dp"
                android:paddingStart="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border"
                android:hint="Email"
                android:padding="8dp"
                android:paddingStart="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border"
                android:hint="Password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:paddingStart="20dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/border"
                android:hint="Contact Number"
                android:padding="8dp"
                android:paddingStart="20dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/user_type_prompt"
                android:textColor="@color/dark_green"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <RadioButton
                    android:id="@+id/radio_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="User"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/radio_crafter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="Crafter"
                    android:textSize="18sp" />
            </RadioGroup>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signup_btn"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/dark_green"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:theme="@style/Theme.MaterialComponents"

                app:cornerRadius="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Already have an account?" />

                <TextView
                    android:id="@+id/loginRedirectText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="@string/login_here"
                    android:textColor="@color/green"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>