<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crafterUI.home.AddPoint">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/white"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/collected_materials_prompt"
            android:textSize="20sp"
            android:paddingTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/choose_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_waste"
            android:textColor="@color/dark_green"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingVertical="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_text"
            app:layout_constraintVertical_bias="0.082"
            tools:ignore="HardcodedText" />

        <RadioGroup
            android:id="@+id/radio_waste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choose_text"
            app:layout_constraintVertical_bias="0.059"
            tools:ignore="MissingConstraints">

            <RadioButton
                android:id="@+id/radio_glass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Glass"
                android:textSize="18sp"
                android:paddingVertical="10dp"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radio_paper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Paper"
                android:textSize="18sp"
                android:paddingVertical="10dp"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radio_cardboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cardboard"
                android:textSize="18sp"
                android:paddingVertical="10dp"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radio_plastic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Plastic"
                android:textSize="18sp"
                android:paddingVertical="10dp"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radio_metal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Metal"
                android:textSize="18sp"
                android:paddingVertical="10dp"
                tools:ignore="HardcodedText" />

        </RadioGroup>

        <EditText
            android:id="@+id/weight_enter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:hint="Enter Weight (in kg)"
            android:padding="8dp"
            android:textColor="@color/black"
            android:layout_marginBottom="15dp"
            android:paddingStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_waste"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="Autofill,HardcodedText,TextFields" />


        <com.google.android.material.button.MaterialButton
            android:theme="@style/Theme.MaterialComponents"
            android:id="@+id/enter_btn"
            android:layout_width="150dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/enter"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:cornerRadius="5dp"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="HardcodedText" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>